@@ -186,3 +186,4 @@ TSAN_NATIVE_RUNTIME_C_SOURCES = @tsan_native_runtime_c_sources@
 
 # OCaml release number, relative to 3.12 (used for RuntimeID)
 OCAML_RELEASE_NUMBER = @OCAML_RELEASE_NUMBER@
+ZINC_RUNTIME_ID = @zinc_runtime_id@
